# netavark-dhcp-proxy-deprecated

./: .cirrus.yml  .gitignore  Cargo.toml  Makefile  OWNERS  README.md  TODO.md  build.rs
.github/workflows/: makefile.yml
contrib/cirrus/: runner.sh  setup.sh
contrib/script/: basic.sh
contrib/systemd/: nv-dhcp.service  nv-dhcp.socket
docs/: netavark-dhcp-proxy.md
hack/: get_ci_vm.sh
proto/: proxy.proto
src/: cache.rs  client.rs  dhcp_service.rs  dhcp_utils.rs  ip.rs  lib.rs  main.rs  proxy_conf.rs  server.rs  types.rs
src/client/: client.rs
src/client/commands/: setup.rs  teardown.rs
src/commands/: setup.rs  teardown.rs
src/grpc/: mod.rs
test/: 001-basic.bats  002-basic_proxy.bats  002-setup.bats  003-teardown.bats  004-server.bats  README-manual_test.md  README.md  helpers.bash
test/configfiles/: bad_interface.json  bad_mac.json  basic.json  no_mac.json
test/dnsmasqfiles/: sample.conf
