[package]
name = "netavark_proxy"
authors = ["Jack Baude <baude022@umn.edu>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jackbaude/netavark-dhcp-proxy"
description = "Adding the macvlan functionality to Podman’s new network stack"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client/client.rs"

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.83"
mozim = "0.2.1"
tonic = "0.8"
prost = "0.11"
futures = "0.3.26"
futures-channel="0.3.26"
futures-core = "0.3.26"
futures-util = "0.3.26"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "net", "fs", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
tower = { version = "0.4" }
log = "0.4.17"
nispor = "1.2.7"
clap = { version = "3.0.12", features = ["derive"] }
env_logger = "0.10.0"
http = "0.2.8"
macaddr = "1.0.1"
nv = { package = "netavark", version  = "1.4"}
rtnetlink = "0.12.0" 
ipnet = { version = "2", features = ["serde"] }
rand = "0.8.5"

[dev-dependencies]
once_cell = "1.8.0"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.8"
